--- a/styles.css
+++ b/styles.css
@@ -8,6 +8,7 @@
   display: flex;
   width: 100%;
   height: 100%;
+  flex-direction: column;
 }
 
 .header {
@@ -33,4 +34,25 @@
 
 .sub-title {
   font-size: 21px;
+}
+
+.main-content {
+  display: flex;
+  justify-content: space-around;
+}
+
+.left-content {
+  width: 600px;
+}
+
+.form {
+  display: flex;
+  width: 470px;
+  flex-direction: column;
+  align-items: center;
+}
+
+footer {
+  display: flex;
+  justify-content: space-between;
 }
