--- a/styles.css
+++ b/styles.css
@@ -96,12 +96,33 @@
   font-family: 'sharp-sans-medium';
   color: #02363D;
   background-color: #F8F9F9;
-  justify-content: space-around;
+  justify-content: center;
+}
+
+.form h2 {
+  font-size: 20px;
+  margin-bottom: 70px;
 }
 
 .form input {
   width: 370px;
   height: 50px;
+}
+
+.inputs {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.inputs input {
+  margin-bottom: 25px;
+}
+
+.inputs label {
+  display: block;
+  align-self: flex-start;
+  font-size: 14px;
 }
 
 .form button {
@@ -111,6 +132,7 @@
   font-family: 'sharp-sans-medium';
   width: 370px;
   height: 50px;
+  font-size: 19px;
 }
 
 footer {
