--- a/styles.css
+++ b/styles.css
@@ -34,6 +34,7 @@
   width: 100%;
   height: 350px;
   position: relative;
+  margin-bottom: 90px;
 }
 
 .header::before {
@@ -78,13 +79,15 @@
 
 .main-content {
   display: flex;
-  justify-content: space-around;
+  justify-content: center;
 }
 
 .left-content {
   width: 600px;
   font-family: 'proxima-nova-regular';
   color: #405457;
+  margin-right: 100px;
+  line-height: 28px;
 }
 
 .form {
@@ -138,4 +141,20 @@
 footer {
   display: flex;
   justify-content: space-between;
+}
+
+.text-content {
+  margin-bottom: 30px;
+}
+
+.text {
+  margin: 30px 0;
+}
+
+footer {
+  margin-top: 90px;
+  display: flex;
+  justify-content: space-around;
+  height: 160px;
+  align-items: center;
 }
